force-app/main/default/objects/Case/fields/Abandon_Calls__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abandon Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>