force-app/main/default/objects/Case/fields/Abandon_Time__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Time__c</fullName>
    <label>Abandon Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>