force-app/main/default/objects/Case/fields/Adjustment_Required_to_Sunshine_Report__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Required_to_Sunshine_Report__c</fullName>
    <label>Adjustment Required to Sunshine Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>