force-app/main/default/objects/Case/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>The Calls attended by the Agent</description>
    <label>Agent Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Caudill,Laurie</fullName>
            </value>
            <value>
                <fullName>Crisp,Tammy</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Eaton,Jane</fullName>
            </value>
            <value>
                <fullName>Morris,Stacey</fullName>
            </value>
            <value>
                <fullName>Switch Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>