force-app/main/default/objects/Case/fields/Annual_Knees_Per_Year_Units__c.field-meta.xml
<CustomField>
    <fullName>Annual_Knees_Per_Year_Units__c</fullName>
    <label>Annual Knees Per Year (Units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>