force-app/main/default/objects/Case/fields/Associated_Meeting_Activity__c.field-meta.xml
<CustomField>
    <fullName>Associated_Meeting_Activity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Associated Meeting/Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>