force-app/main/default/objects/Case/fields/Business_Division__c.field-meta.xml
<CustomField>
    <fullName>Business_Division__c</fullName>
    <label>Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bone Healing</fullName>
            </value>
            <value>
                <fullName>CMFT</fullName>
            </value>
            <value>
                <fullName>CMFT - Robotics</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Ortho - Robotics</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Spine - Robotics</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>