force-app/main/default/objects/Case/fields/Case_Age_In_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_In_Hrs__c</fullName>
    <formula>IF(IsClosed,(ClosedDate - CreatedDate) *24,(NOW() - CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (In Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>