force-app/main/default/objects/Case/fields/Case_Closed_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_by_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Closed by Agent</label>
    <type>Checkbox</type>
</CustomField>