force-app/main/default/objects/Case/fields/Case_rejected__c.field-meta.xml
<CustomField>
    <fullName>Case_rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case rejected</label>
    <type>Checkbox</type>
</CustomField>