force-app/main/default/objects/Case/fields/Case_Reopened_via_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopened_via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Reopened via Email</label>
    <type>Checkbox</type>
</CustomField>