force-app/main/default/objects/Case/fields/Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Thread_Id__c</fullName>
    <defaultValue>&quot;ref:&quot; &amp; &quot;_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT( $RecordType.Id ,5) &amp; SUBSTITUTE(Left(RIGHT($RecordType.Id ,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT( $RecordType.Id ,5) &amp; &quot;:ref&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Thread Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>