force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Base Station Return</fullName>
            </value>
            <value>
                <fullName>Broker Requests</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Case ID &amp; Recon Request</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>CS - A - Logistics &amp; Sales Support</fullName>
            </value>
            <value>
                <fullName>CS - B- Technical Support</fullName>
            </value>
            <value>
                <fullName>CS - C - Servicing</fullName>
            </value>
            <value>
                <fullName>CS - D - Complaint</fullName>
            </value>
            <value>
                <fullName>DCMS Technical Support</fullName>
            </value>
            <value>
                <fullName>Deactivation Request</fullName>
            </value>
            <value>
                <fullName>Disposables</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Follow Up/Feedback</fullName>
            </value>
            <value>
                <fullName>General Case Info</fullName>
            </value>
            <value>
                <fullName>General Information</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Hardware &amp; Software</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Home Base Station Activation</fullName>
            </value>
            <value>
                <fullName>I.T. Technical Issues</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Info Only</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
                <label>Junk/SPAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>