force-app/main/default/objects/Case/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <inlineHelpText>Kindly select a value in this field when &quot;PSI - K - Post-Delivery&quot;, &quot;CS - B - Technical Support&quot; or &quot;CS - C - Servicing&quot; is selected in the Category field.</inlineHelpText>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not a Complaint</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>