force-app/main/default/objects/Case/fields/Closed_Year__c.field-meta.xml
<CustomField>
    <fullName>Closed_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(ClosedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Year</label>
    <type>Text</type>
</CustomField>