force-app/main/default/objects/Case/fields/Compliance_Office_Classification__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Office_Classification__c</fullName>
    <label>Compliance Office Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Disputed transactions - Correction required</fullName>
                <color>#0B6FCE</color>
                <label>Disputed transactions - Correction required</label>
            </value>
            <value>
                <fullName>Disputed transactions - No Correction required</fullName>
                <color>#78C953</color>
                <label>Disputed transactions - No Correction required</label>
            </value>
            <value>
                <fullName>Request for additional information</fullName>
                <color>#E27001</color>
                <label>Request for additional information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>