force-app/main/default/objects/Case/fields/Compliance_Office_Comments__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Office_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compliance Office Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>