force-app/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>This is the text name field that is needed to the Consumers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>