force-app/main/default/objects/Case/fields/Contract_Champion__c.field-meta.xml
<CustomField>
    <fullName>Contract_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>