force-app/main/default/objects/Case/fields/Corporate_Pricing_Director__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Pricing_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Pricing Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>