force-app/main/default/objects/Case/fields/Created_By_List_View__c.field-meta.xml
<CustomField>
    <fullName>Created_By_List_View__c</fullName>
    <formula>CreatedBy.FirstName  &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By (List View)</label>
    <type>Text</type>
</CustomField>