force-app/main/default/objects/Case/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact Name</label>
    <referenceTo>Healthcare_Surgeon_Relationship__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>