force-app/main/default/objects/Case/fields/Customer_Contact_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Customer Contact Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>