force-app/main/default/objects/Case/fields/Customer_Contact_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Phone_Formula__c</fullName>
    <formula>Customer_Contact_Name_New__r.Phone</formula>
    <label>Customer Contact Phone #</label>
    <type>Text</type>
</CustomField>