force-app/main/default/objects/Case/fields/Customer_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Type__c</fullName>
    <description>Pick list used for type of Customer Service Calls</description>
    <label>Customer Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backorder</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>CBE</fullName>
            </value>
            <value>
                <fullName>DCS Question/Issues</fullName>
            </value>
            <value>
                <fullName>DeNovo</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Inventory Issue</fullName>
            </value>
            <value>
                <fullName>Invoice Copy</fullName>
            </value>
            <value>
                <fullName>Loaner Pool</fullName>
            </value>
            <value>
                <fullName>Order Entry</fullName>
            </value>
            <value>
                <fullName>Order Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POD/Tracking Info</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Question</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>Purchase Order Follow-Up</fullName>
            </value>
            <value>
                <fullName>Return Info</fullName>
            </value>
            <value>
                <fullName>Shipping Issue</fullName>
            </value>
            <value>
                <fullName>Shortage/Overage Claim</fullName>
            </value>
            <value>
                <fullName>Surgical Technique/Lit. Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>