force-app/main/default/objects/Case/fields/Customer_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Temperature__c</fullName>
    <label>Customer Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>