force-app/main/default/objects/Case/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>