force-app/main/default/objects/Case/fields/Deal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Deal_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Summary</label>
    <type>TextArea</type>
</CustomField>