force-app/main/default/objects/Case/fields/DEV_Triage_Ticket__c.field-meta.xml
<CustomField>
    <fullName>DEV_Triage_Ticket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DEV Triage Ticket</label>
    <length>4</length>
    <type>Text</type>
</CustomField>