force-app/main/default/objects/Case/fields/Email_Data__c.field-meta.xml
<CustomField>
    <fullName>Email_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>