force-app/main/default/objects/Case/fields/EtQ__c.field-meta.xml
<CustomField>
    <fullName>EtQ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For multiple EtQ #, separate by a semi-colon (;)</inlineHelpText>
    <label>EtQ number CMP-</label>
    <type>TextArea</type>
</CustomField>