force-app/main/default/objects/Case/fields/External_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Case_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Case ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>