force-app/main/default/objects/Case/fields/Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Payment__c</fullName>
    <label>Form of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cash or cash equivalent</fullName>
            </value>
            <value>
                <fullName>In-kind items and services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>