force-app/main/default/objects/Case/fields/HCP_Dispute_Contact_name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Dispute_Contact_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCP Dispute Contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>