force-app/main/default/objects/Case/fields/HCP_s_NPI__c.field-meta.xml
<CustomField>
    <fullName>HCP_s_NPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCP&apos;s NPI#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>