force-app/main/default/objects/Case/fields/IDN_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>IDN_Affiliation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDN Affiliation</label>
    <type>TextArea</type>
</CustomField>