force-app/main/default/objects/Case/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generic indicator indicating arrival of new email</description>
    <label>New Email</label>
    <type>Checkbox</type>
</CustomField>