force-app/main/default/objects/Case/fields/Injury_as_a_result_of_use_of_the_device__c.field-meta.xml
<CustomField>
    <fullName>Injury_as_a_result_of_use_of_the_device__c</fullName>
    <label>Injury as a result of use of the device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>