force-app/main/default/objects/Case/fields/IRA_Intl_Return_Authorization__c.field-meta.xml
<CustomField>
    <fullName>IRA_Intl_Return_Authorization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IRA (Intl Return Authorization)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>