force-app/main/default/objects/Case/fields/Issue_Details__c.field-meta.xml
<CustomField>
    <fullName>Issue_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Details</label>
    <type>TextArea</type>
</CustomField>