force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech Support/Engineering</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Clinical support</fullName>
            </value>
            <value>
                <fullName>Installation documentation/ paperwork</fullName>
            </value>
            <value>
                <fullName>Demo Inquiry</fullName>
            </value>
            <value>
                <fullName>Imaging/ Case Inquiry</fullName>
            </value>
            <value>
                <fullName>IT Security</fullName>
            </value>
            <value>
                <fullName>Med Ed</fullName>
            </value>
            <value>
                <fullName>General/ Misc</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Product Questions category</fullName>
            </value>
            <value>
                <fullName>Pricing category</fullName>
            </value>
            <value>
                <fullName>Invoice category</fullName>
            </value>
            <value>
                <fullName>Shipping category</fullName>
            </value>
            <value>
                <fullName>Account Info category</fullName>
            </value>
            <value>
                <fullName>Complaint category</fullName>
            </value>
            <value>
                <fullName>Switchboard</fullName>
            </value>
            <value>
                <fullName>Quoting</fullName>
            </value>
            <value>
                <fullName>PROs Report</fullName>
            </value>
            <value>
                <fullName>Evaluation/Sample Product</fullName>
            </value>
            <value>
                <fullName>Non-Sales Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>