force-app/main/default/objects/Case/fields/Knee_ASP__c.field-meta.xml
<CustomField>
    <fullName>Knee_ASP__c</fullName>
    <label>Knee ASP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>