force-app/main/default/objects/Case/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Name</label>
    <type>TextArea</type>
</CustomField>