force-app/main/default/objects/Case/fields/Magna_5_notification__c.field-meta.xml
<CustomField>
    <fullName>Magna_5_notification__c</fullName>
    <defaultValue>&quot;inboundhelpdesk@magna5global.com&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Magna 5 notification</label>
    <type>Email</type>
</CustomField>