force-app/main/default/objects/Case/fields/MyMobility_User_ID__c.field-meta.xml
<CustomField>
    <fullName>MyMobility_User_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>mymobility User ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>