force-app/main/default/objects/Case/fields/Nature_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Payment__c</fullName>
    <label>Nature of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consulting Fee</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Royalty or License</fullName>
            </value>
            <value>
                <fullName>Space rental or facility fees (teaching hospital only)</fullName>
            </value>
            <value>
                <fullName>Travel and Lodging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>