force-app/main/default/objects/Case/fields/No_of_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours_Worked__c</fullName>
    <label>No. of  Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>