force-app/main/default/objects/Case/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>These notes are only visible to call center agent profile</inlineHelpText>
    <label>Notes</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>