force-app/main/default/objects/Case/fields/Open_Payment_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Open_Payment_System_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Payment System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>