force-app/main/default/objects/Case/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Used to store Zimmer order number</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>