force-app/main/default/objects/Case/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>