force-app/main/default/objects/Case/fields/Other_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Sub_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide more information.</inlineHelpText>
    <label>Other(Sub-Category)</label>
    <type>TextArea</type>
</CustomField>