force-app/main/default/objects/Case/fields/Patient_Age__c.field-meta.xml
<CustomField>
    <fullName>Patient_Age__c</fullName>
    <description>Age of patient</description>
    <inlineHelpText>Geben Sie hier das Alter des Patienten ein</inlineHelpText>
    <label>Patient_Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>