force-app/main/default/objects/Case/fields/Patient_on_table__c.field-meta.xml
<CustomField>
    <fullName>Patient_on_table__c</fullName>
    <label>Patient on table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>