force-app/main/default/objects/Case/fields/Patient_Sex__c.field-meta.xml
<CustomField>
    <fullName>Patient_Sex__c</fullName>
    <description>Sex of the patient</description>
    <inlineHelpText>Geben Sie hier das Geschlecht des Patienten ein</inlineHelpText>
    <label>Patient_Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>weiblich</fullName>
            </value>
            <value>
                <fullName>männlich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>